Chnaged build.sbt and run0.sh so that we can execute the scritp via SSH. No need to set-up Java option in sbt build.sbt. Use parameters instead.